welcome.lessons.welcome.array.search.SecondMaxValue.scala.error
max2Value:11: error: ')' expected but '.' found.
  for (i<- to nums.length-1){
                  ^max2Value:18: error: illegal start of simple expression
} 
^